# stocra-sdk-python

./: README.md  pyproject.toml
.github/workflows/: publish.yaml  push.yaml
docs/: index.html  search.js  stocra.html
docs/stocra/: asynchronous.html  base_client.html  models.html  synchronous.html  utils.html
docs/stocra/asynchronous/: client.html  error_handlers.html
docs/stocra/synchronous/: client.html  error_handlers.html
scripts/: docs  lint  test
stocra/: base_client.py  models.py  utils.py
stocra/asynchronous/: client.py  error_handlers.py  retry_models.py
stocra/synchronous/: client.py  error_handlers.py  retry_strategies.py
stocra/v1_0/: models.py
tests/: fixtures.py  test_models.py
tests/asynchronous/: test_client.py  test_error_handlers.py
tests/synchronous/: test_client.py  test_error_handlers.py
tests/tests_v1_0/: test_models.py
